fix: remove redundant ZGenerational option from JAVA_TOOL_OPTIONS in pom.xml and statefulset.yaml